# projeto_streamlit

./: Cadastro.py  Consulta.py  pyproject.toml
pages/: Consulta.py
