[tool.poetry]
name = "app-web"
version = "0.1.0"
description = ""
authors = ["Mario <mgermoliato@yahoo.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
streamlit = "^1.39.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
